--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,6 +31,59 @@
 
         }
 
+/*estlização da barra de input*/
+        .form-control {
+  width: 100%;
+  height: 50px; /* Ajuste a altura conforme necessário */
+  padding: 10px;
+  transition: .2s linear;
+  border: 2.5px solid black;
+  border-radius: 20px; /* Adiciona canto arredondado */
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.form-control:focus {
+  outline: none;
+  border: 3px solid black; /* Borda mais grossa ao focar */
+  box-shadow: -2px -2px -2px black;
+}
+
+/*estilização do botão de enviar*/
+
+button {
+  --primary-color: #4d9763;
+  --secondary-color: #fff;
+  --hover-color: #111;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 20px;
+  color: var(--secondary-color);
+  padding: 10px 20px;
+  background: var(--primary-color);
+  display: flex;
+  transition: 0.2s background;
+  align-items: center;
+  gap: 0.6em;
+  font-weight: bold;
+}
+
+
+
+button:hover {
+  background-color: var(--hover-color);
+}
+
+
+
+
+
+
+
+
+
+
 
         
     </style>
@@ -57,7 +110,7 @@
             <form id="musicForm">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" id="musicName" placeholder="Digite o nome da musica.">
-                     <button class="btn btn-primary" type="submit">Enviar</button>
+                     <button class="button" type="submit">Enviar</button>
                     <div class="input-group append">
                     </div>
                 </div>
